Move eureka client and spring cloud config to parent pom. Refactor package name.

--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,6 @@
 		<groupId>com.iotmining</groupId>
 		<artifactId>microservices</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
-		<!--		<relativePath/> &lt;!&ndash; Ensure this is set &ndash;&gt;-->
 	</parent>
 	<artifactId>tenant-management-service</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
@@ -29,6 +28,14 @@
 		<java.version>17</java.version>
 	</properties>
 	<dependencies>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-config</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter</artifactId>
