--- a/.github/workflows/release-tms.yml
+++ b/.github/workflows/release-tms.yml
@@ -1,7 +1,12 @@
-name: Build & Release TMS Image
+name: CI/CD • TMS
 
 on:
+  pull_request:
+    paths:
+      - '**'
+      - '.github/workflows/release-tms.yml'
   push:
+    branches: [ main ]
     paths:
       - '**'
       - '.github/workflows/release-tms.yml'
@@ -9,32 +14,32 @@ on:
 
 env:
   IMAGE_NAME: ghcr.io/iotmining/tenant-management-service
+  JAVA_VERSION: '21'
+
+concurrency:
+  group: tms-${{ github.ref }}
+  cancel-in-progress: true
+
+permissions:
+  contents: read
+  packages: write
+  security-events: write
 
 jobs:
-  docker:
+  # 1) Build & Test
+  test:
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
-
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up Buildx
-        uses: docker/setup-buildx-action@v3
+      - name: Setup Java
+        uses: actions/setup-java@v4
         with:
-          driver: docker-container
-          install: true
+          distribution: temurin
+          java-version: ${{ env.JAVA_VERSION }}
+          cache: maven
 
-      - name: Log in to GHCR
-        uses: docker/login-action@v3
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      # Create settings.xml for GitHub Packages using PAT (GH_PACKAGES_TOKEN)
-      - name: Create gpr-settings.xml (temp)
+      - name: Create GitHub Packages settings.xml
         env:
           GH_USERNAME: ${{ github.actor }}
           GH_PACKAGES_TOKEN: ${{ secrets.GH_PACKAGES_TOKEN }}
@@ -43,9 +48,7 @@ jobs:
           SETTINGS="$RUNNER_TEMP/gpr-settings.xml"
           TOKEN="${GH_PACKAGES_TOKEN:-$GITHUB_TOKEN}"
           cat > "$SETTINGS" <<XML
-          <settings xmlns="http://maven.apache.org/SETTINGS/1.0.0"
-                    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-                    xsi:schemaLocation="http://maven.apache.org/SETTINGS/1.0.0 https://maven.apache.org/xsd/settings-1.0.0.xsd">
+          <settings>
             <servers>
               <server>
                 <id>github</id>
@@ -64,14 +67,6 @@ jobs:
                     <snapshots><enabled>true</enabled></snapshots>
                   </repository>
                 </repositories>
-                <pluginRepositories>
-                  <pluginRepository>
-                    <id>github-plugins</id>
-                    <url>https://maven.pkg.github.com/iotmining/platform-build</url>
-                    <releases><enabled>true</enabled></releases>
-                    <snapshots><enabled>true</enabled></snapshots>
-                  </pluginRepository>
-                </pluginRepositories>
               </profile>
             </profiles>
             <activeProfiles>
@@ -79,23 +74,59 @@ jobs:
             </activeProfiles>
           </settings>
           XML
+          echo "MAVEN_SETTINGS=$SETTINGS" >> "$GITHUB_ENV"
           echo "GPR_SETTINGS=$SETTINGS" >> "$GITHUB_ENV"
 
-      - name: Extract metadata (tags, labels)
+      - name: Maven Verify
+        run: mvn -s "${MAVEN_SETTINGS}" -B -ntp -DskipTests=false verify
+
+      - name: Upload JUnit reports
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: junit-reports
+          path: |
+            **/target/surefire-reports/*.xml
+            **/target/failsafe-reports/*.xml
+          if-no-files-found: ignore
+
+  # 2) Docker Build & Push
+  docker:
+    runs-on: ubuntu-latest
+    needs: test
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: docker/setup-qemu-action@v3
+      - uses: docker/setup-buildx-action@v3
+        with:
+          driver: docker-container
+          install: true
+
+      - name: Docker metadata
         id: meta
         uses: docker/metadata-action@v5
         with:
           images: ${{ env.IMAGE_NAME }}
           tags: |
-            type=sha
+            type=raw,value=sha-${{ github.sha }}
             type=raw,value=latest,enable={{is_default_branch}}
 
-      - name: Build & push
+      - name: Log in to GHCR
+        if: github.ref == 'refs/heads/main'
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Build & Push
         uses: docker/build-push-action@v6
         with:
           context: .
           file: ./Dockerfile
-          push: true
+          platforms: linux/amd64
+          push: ${{ github.ref == 'refs/heads/main' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           secrets: |
@@ -104,5 +135,5 @@ jobs:
             SKIP_TESTS=true
             VCS_REF=${{ github.sha }}
             BUILD_DATE=${{ github.run_id }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+          cache-from: type=gha,scope=tms
+          cache-to: type=gha,mode=max,scope=tms
