--- a/.github/workflows/tms-pr.yml
+++ b/.github/workflows/tms-pr.yml
@@ -1,25 +1,39 @@
 name: tms-pr
 on:
   pull_request:
-    paths: ["services/tms-service/**", ".github/workflows/**"]
+    branches: [ "**" ]
+    paths:
+      - "**"
+      - ".github/workflows/**"
 
 jobs:
   pr:
     runs-on: ubuntu-latest
-    defaults: { run: { working-directory: services/tms-service } }
+    defaults:
+      run:
+        working-directory: .   # POM is at repo root
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-java@v4
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Print tree
+        run: ls -la && echo && find . -maxdepth 2 -type f -name "pom.xml" -print
+
+      - name: Setup Java 21 with GitHub Packages auth
+        uses: actions/setup-java@v4
         with:
           distribution: temurin
-          java-version: '21'
-          cache: 'maven'
+          java-version: "21"
+          cache: maven
           server-id: github
           server-username: GITHUB_ACTOR
           server-password: GITHUB_TOKEN
-      - name: Build & Test
+
+      - name: Build & Test (uses parent + BOM from GitHub Packages)
         run: mvn -B -ntp clean verify
+
       - name: Lint Dockerfile
         run: docker run --rm -i hadolint/hadolint < Dockerfile
-      - name: Dependency Audit (optional)
+
+      - name: (Optional) Dependency Audit
         run: mvn -B -ntp org.owasp:dependency-check-maven:check
