--- a/.github/workflows/tms-release.yml
+++ b/.github/workflows/tms-release.yml
@@ -1,149 +1,55 @@
-name: CI/CD • TMS _ 2
+name: Build and Push TMS Image
 
 on:
-  pull_request:
-    paths:
-      - '**'
-      - '.github/workflows/release-tms.yml'
   push:
-    branches: [ main ]
+    branches: [main]
     paths:
-      - '**'
-      - '.github/workflows/release-tms.yml'
-  workflow_dispatch: {}
-
-env:
-  IMAGE_NAME: ghcr.io/iotmining/tenant-management-service
-  JAVA_VERSION: '21'
-
-concurrency:
-  group: tms-${{ github.ref }}
-  cancel-in-progress: true
-
-permissions:
-  contents: read
-  packages: write
-  security-events: write
+      - '**/src/**'
+      - 'pom.xml'
+      - 'Dockerfile'
+  workflow_dispatch:
 
 jobs:
-  # 1) Build & Test
-  test:
+  build:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
+
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
 
-      - name: Setup Java
-        uses: actions/setup-java@v4
-        with:
-          distribution: temurin
-          java-version: ${{ env.JAVA_VERSION }}
-          cache: maven
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
-      - name: Create GitHub Packages settings.xml
-        env:
-          GH_USERNAME: ${{ github.actor }}
-          GH_PACKAGES_TOKEN: ${{ secrets.GH_PACKAGES_TOKEN }}  # PAT with read:packages (and repo if private)
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}            # fallback if parent lives in same repo (usually not)
-        run: |
-          SETTINGS="$RUNNER_TEMP/gpr-settings.xml"
-          TOKEN="${GH_PACKAGES_TOKEN:-$GITHUB_TOKEN}"
-          cat > "$SETTINGS" <<XML
-          <settings>
-            <servers>
-              <server>
-                <id>github</id>
-                <username>${GH_USERNAME}</username>
-                <password>${TOKEN}</password>
-              </server>
-            </servers>
-            <profiles>
-              <profile>
-                <id>github-packages</id>
-                <repositories>
-                  <repository>
-                    <id>github</id>
-                    <url>https://maven.pkg.github.com/iotmining/platform-build</url>
-                    <releases><enabled>true</enabled></releases>
-                    <snapshots><enabled>true</enabled></snapshots>
-                  </repository>
-                  <repository>
-                    <id>central</id>
-                    <url>https://repo1.maven.org/maven2</url>
-                  </repository>
-                </repositories>
-                <pluginRepositories>
-                  <pluginRepository>
-                    <id>github</id>
-                    <url>https://maven.pkg.github.com/iotmining/platform-build</url>
-                  </pluginRepository>
-                </pluginRepositories>
-              </profile>
-            </profiles>
-            <activeProfiles>
-              <activeProfile>github-packages</activeProfile>
-            </activeProfiles>
-          </settings>
-          XML
-          echo "MAVEN_SETTINGS=$SETTINGS" >> "$GITHUB_ENV"
-          echo "GPR_SETTINGS=$SETTINGS" >> "$GITHUB_ENV"
-
-#      - name: Maven Verify
-#        run: mvn -s "${MAVEN_SETTINGS}" -B -ntp -DskipTests=false verify
-#
-#      - name: Upload JUnit reports
-#        if: always()
-#        uses: actions/upload-artifact@v4
-#        with:
-#          name: junit-reports
-#          path: |
-#            **/target/surefire-reports/*.xml
-#            **/target/failsafe-reports/*.xml
-#          if-no-files-found: ignore
-
-  # 2) Docker Build & Push
-  docker:
-    runs-on: ubuntu-latest
-    needs: test
-    steps:
-      - uses: actions/checkout@v4
-
-      - uses: docker/setup-qemu-action@v3
-      - uses: docker/setup-buildx-action@v3
-        with:
-          driver: docker-container
-          install: true
-
-      - name: Docker metadata
-        id: meta
-        uses: docker/metadata-action@v5
-        with:
-          images: ${{ env.IMAGE_NAME }}
-          tags: |
-            type=raw,value=sha-${{ github.sha }}
-            type=raw,value=latest,enable={{is_default_branch}}
-
-      - name: Log in to GHCR
-        if: github.ref == 'refs/heads/main'
+      - name: GitHub Container Registry Login
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build & Push
-        uses: docker/build-push-action@v6
+      - name: Write Maven Settings for GitHub Packages
+        run: |
+          cat > settings.xml <<EOF
+          <settings>
+            <servers>
+              <server>
+                <id>github</id>
+                <username>${{ github.actor }}</username>
+                <password>${{ secrets.GH_PACKAGES_TOKEN || secrets.GITHUB_TOKEN }}</password>
+              </server>
+            </servers>
+          </settings>
+          EOF
+
+      - name: Build and Push Docker Image
+        uses: docker/build-push-action@v5
         with:
           context: .
-          file: ./Dockerfile
-          platforms: linux/amd64
-          push: ${{ github.ref == 'refs/heads/main' }}
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+          file: Dockerfile
+          push: true
+          tags: ghcr.io/${{ github.repository }}/tms:latest
           secrets: |
-            id=gpr,src=${{ env.GPR_SETTINGS }}     # passes Maven settings into the build stage
-          build-args: |
-            SKIP_TESTS=true
-            VCS_REF=${{ github.sha }}
-            BUILD_DATE=${{ github.run_id }}
-          cache-from: type=gha,scope=tms
-          cache-to: type=gha,mode=max,scope=tms
+            id=gpr,src=settings.xml
