--- a/.github/workflows/tms-release.yml
+++ b/.github/workflows/tms-release.yml
@@ -1,55 +1,53 @@
-name: Build and Push TMS Image
+name: CI/CD - TMS Service
 
 on:
   push:
-    branches: [main]
-    paths:
-      - '**/src/**'
-      - 'pom.xml'
-      - 'Dockerfile'
-  workflow_dispatch:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
 
 jobs:
-  build:
+  build-and-push:
+    name: Build & Push Docker Image
     runs-on: ubuntu-latest
+
     permissions:
       contents: read
       packages: write
 
     steps:
-      - name: Checkout
+      - name: Checkout source
         uses: actions/checkout@v4
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: GitHub Container Registry Login
-        uses: docker/login-action@v3
+      - name: Set up JDK 21
+        uses: actions/setup-java@v4
         with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          distribution: 'temurin'
+          java-version: '21'
 
-      - name: Write Maven Settings for GitHub Packages
+      - name: Generate Maven settings.xml for GitHub Packages
         run: |
-          cat > settings.xml <<EOF
+          mkdir -p /home/runner/.m2
+          cat > /home/runner/.m2/settings.xml <<EOF
           <settings>
             <servers>
               <server>
                 <id>github</id>
                 <username>${{ github.actor }}</username>
-                <password>${{ secrets.GH_PACKAGES_TOKEN || secrets.GITHUB_TOKEN }}</password>
+                <password>${{ secrets.GITHUB_TOKEN }}</password>
               </server>
             </servers>
           </settings>
           EOF
 
-      - name: Build and Push Docker Image
+      - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
           context: .
           file: Dockerfile
           push: true
-          tags: ghcr.io/${{ github.repository }}/tms:latest
+          tags: |
+            ghcr.io/${{ github.repository }}:tms-latest
+            ghcr.io/${{ github.repository }}:tms-${{ github.sha }}
           secrets: |
-            id=gpr,src=settings.xml
+            id=gpr,src=/home/runner/.m2/settings.xml
