--- a/.github/workflows/release-tms.yml
+++ b/.github/workflows/release-tms.yml
@@ -1,12 +1,12 @@
 name: CI/CD • TMS
 
 on:
-  pull_request:
+  push:
+    branches: [ main ]
     paths:
       - '**'
       - '.github/workflows/release-tms.yml'
-  push:
-    branches: [ main ]
+  pull_request:
     paths:
       - '**'
       - '.github/workflows/release-tms.yml'
@@ -26,20 +26,22 @@ permissions:
   security-events: write
 
 jobs:
-  # 1) Build & Test
-  test:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
 
-      - name: Setup Java
+  build-and-push:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout source
+        uses: actions/checkout@v4
+
+      - name: Set up Java ${{ env.JAVA_VERSION }}
         uses: actions/setup-java@v4
         with:
           distribution: temurin
           java-version: ${{ env.JAVA_VERSION }}
           cache: maven
 
-      - name: Create GitHub Packages settings.xml
+      - name: Prepare GitHub Packages settings.xml
         env:
           GH_USERNAME: ${{ github.actor }}
           GH_PACKAGES_TOKEN: ${{ secrets.GH_PACKAGES_TOKEN }}
@@ -77,31 +79,10 @@ jobs:
           echo "MAVEN_SETTINGS=$SETTINGS" >> "$GITHUB_ENV"
           echo "GPR_SETTINGS=$SETTINGS" >> "$GITHUB_ENV"
 
-#      - name: Maven Verify
-#        run: mvn -s "${MAVEN_SETTINGS}" -B -ntp -DskipTests=false verify
-
-#      - name: Upload JUnit reports
-#        if: always()
-#        uses: actions/upload-artifact@v4
-#        with:
-#          name: junit-reports
-#          path: |
-#            **/target/surefire-reports/*.xml
-#            **/target/failsafe-reports/*.xml
-#          if-no-files-found: ignore
-
-  # 2) Docker Build & Push
-  docker:
-    runs-on: ubuntu-latest
-    needs: test
-    steps:
-      - uses: actions/checkout@v4
-
       - uses: docker/setup-qemu-action@v3
       - uses: docker/setup-buildx-action@v3
         with:
           driver: docker-container
-          install: true
 
       - name: Docker metadata
         id: meta
@@ -120,7 +101,7 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build & Push
+      - name: Docker Build & Push
         uses: docker/build-push-action@v6
         with:
           context: .
