--- a/.github/workflows/release-tms.yml
+++ b/.github/workflows/release-tms.yml
@@ -75,7 +75,6 @@ jobs:
             </activeProfiles>
           </settings>
           XML
-          echo "MAVEN_SETTINGS=$SETTINGS" >> "$GITHUB_ENV"
           echo "GPR_SETTINGS=$SETTINGS" >> "$GITHUB_ENV"
 
       - uses: docker/setup-qemu-action@v3
@@ -92,7 +91,7 @@ jobs:
             type=raw,value=sha-${{ github.sha }}
             type=raw,value=latest,enable={{is_default_branch}}
 
-      - name: Log in to GHCR
+      - name: Log in to GitHub Container Registry (GHCR)
         if: github.ref == 'refs/heads/main'
         uses: docker/login-action@v3
         with:
@@ -104,13 +103,13 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           context: .
-          file: ./Dockerfile
+          file: ./Dockerfile.workflow
           platforms: linux/amd64
           push: ${{ github.ref == 'refs/heads/main' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           secrets: |
-            id=gpr,src=${{ env.GPR_SETTINGS }}
+            gpr=${{ env.GPR_SETTINGS }}
           build-args: |
             SKIP_TESTS=true
             VCS_REF=${{ github.sha }}
