--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: dashboard-management-service
+    name: IoTMining-Tenant-Management-Service
   datasource:
     url: jdbc:postgresql://localhost:5432/iotmining
     username: postgres
@@ -46,9 +46,16 @@ services:
   dms:
     url: http://localhost:8084 # URL where DMS is running
 server:
-  port: 8083
+  port: 8061
 
-
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
+    fetch-registry: true
+    register-with-eureka: true
+  instance:
+    prefer-ip-address: true  # Use IP instead of hostname for discovery
 #
 #flyway:
 #  locations: classpath:db/migration
